# pyitsx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
bench/: bench_compare_positions.py  bench_itsx_baseline.py  bench_profile_analysis.py  bench_pyitsx.py  bench_search_strategies.py  profile_ordering_F.json
src/pyitsx/: __init__.py  __main__.py  chains.py  cli.py  constants.py  models.py  pipeline.py  profiles.py  regions.py  scoring.py
tests/: conftest.py  test_chains.py  test_chimera.py  test_classify.py  test_delimit.py  test_extract.py  test_orient.py  test_prepare.py  test_profiles.py  test_regions.py  test_scoring.py  test_smoke.py
