[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyitsx"
version = "0.1.0"
description = "Fast ITS region detection and extraction using in-process HMM search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Josh Walker", email = "joshowalker@yahoo.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
keywords = ["bioinformatics", "ITS", "fungi", "HMM", "nanopore", "amplicon"]

dependencies = [
    "pyhmmer>=0.10.0",
]

[project.optional-dependencies]
bio = [
    "biopython>=1.81",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "biopython>=1.81",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
bench = [
    "tqdm>=4.65.0",
]

[project.scripts]
pyitsx = "pyitsx.cli:main"

[project.urls]
Repository = "https://github.com/joshuaowalker/pyitsx"
Issues = "https://github.com/joshuaowalker/pyitsx/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyitsx*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
